Feat: cria as documentações da UsuarioController para o swagger
